master : date picker added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="note_important">Important</string>
     <string name="first_item_button">First Item</string>
     <string name="last_item_button">Last Item</string>
+    <string name="date_picker_alert_header">Date of note:</string>
 </resources>
